avd-nsg-bastion.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "nsgName": {
      "type": "string",
      "defaultValue": "NSG-Bastion",
      "metadata": {
        "description": "Name of the Network Security Group for the Bastion subnet"
      }
    },
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]",
      "metadata": {
        "description": "Azure region for the NSG"
      }
    },
    "vnetName": {
      "type": "string",
      "defaultValue": "VNet-AVD",
      "metadata": {
        "description": "Name of the existing VNet"
      }
    },
    "subnetName": {
      "type": "string",
      "defaultValue": "AzureBastionSubnet",
      "metadata": {
        "description": "Name of the Bastion subnet - must be exactly 'AzureBastionSubnet'"
      }
    },
    "subnetAddressPrefix": {
      "type": "string",
      "defaultValue": "10.0.2.0/26",
      "metadata": {
        "description": "Address prefix of the existing AzureBastionSubnet (required to update it without breaking existing config)"
      }
    }
  },
  "variables": {},
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2023-09-01",
      "name": "[parameters('nsgName')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowHttpsInbound",
            "properties": {
              "priority": 100,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "description": "Client HTTPS"
            }
          },
          {
            "name": "AllowGatewayManagerInbound",
            "properties": {
              "priority": 110,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "GatewayManager",
              "destinationAddressPrefix": "*",
              "description": "Azure infra control"
            }
          },
          {
            "name": "AllowAzureLoadBalancerInbound",
            "properties": {
              "priority": 120,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "AzureLoadBalancer",
              "destinationAddressPrefix": "*",
              "description": "Health probes"
            }
          },
          {
            "name": "AllowBastionHostCommsInbound",
            "properties": {
              "priority": 130,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRanges": ["8080", "5701"],
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "description": "Bastion host comms"
            }
          },
          {
            "name": "AllowSshRdpOutbound",
            "properties": {
              "priority": 100,
              "direction": "Outbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRanges": ["22", "3389"],
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "VirtualNetwork",
              "description": "RDP/SSH to targets"
            }
          },
          {
            "name": "AllowAzureCloudOutbound",
            "properties": {
              "priority": 110,
              "direction": "Outbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "AzureCloud",
              "description": "Azure services"
            }
          },
          {
            "name": "AllowBastionHostCommsOutbound",
            "properties": {
              "priority": 120,
              "direction": "Outbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRanges": ["8080", "5701"],
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "description": "Bastion host comms"
            }
          },
          {
            "name": "AllowCertificateValidationOutbound",
            "properties": {
              "priority": 130,
              "direction": "Outbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Internet",
              "description": "Certificate validation"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks/subnets",
      "apiVersion": "2023-09-01",
      "name": "[concat(parameters('vnetName'), '/', parameters('subnetName'))]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]"
      ],
      "properties": {
        "addressPrefix": "[parameters('subnetAddressPrefix')]",
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]"
        }
      }
    }
  ],
  "outputs": {
    "nsgId": {
      "type": "string",
      "value": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]"
    }
  }
}
