avd-nsg-no-nat.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "nsgName": {
      "type": "string",
      "defaultValue": "NSG-Default",
      "metadata": {
        "description": "Name of the Network Security Group"
      }
    },
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]",
      "metadata": {
        "description": "Azure region for the NSG"
      }
    },
    "vnetName": {
      "type": "string",
      "defaultValue": "VNet-AVD",
      "metadata": {
        "description": "Name of the existing VNet"
      }
    },
    "subnetName": {
      "type": "string",
      "defaultValue": "default",
      "metadata": {
        "description": "Name of the existing subnet to associate this NSG with"
      }
    },
    "subnetAddressPrefix": {
      "type": "string",
      "defaultValue": "10.0.1.0/24",
      "metadata": {
        "description": "Address prefix of the existing subnet (required to update it without breaking existing config)"
      }
    }
  },
  "variables": {},
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2023-09-01",
      "name": "[parameters('nsgName')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "Allow-AVD-ServiceTraffic",
            "properties": {
              "priority": 100,
              "direction": "Outbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "WindowsVirtualDesktop",
              "description": "AVD control plane"
            }
          },
          {
            "name": "Allow-AzureAD",
            "properties": {
              "priority": 110,
              "direction": "Outbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "AzureActiveDirectory",
              "description": "Entra ID auth"
            }
          },
          {
            "name": "Allow-AzureMonitor",
            "properties": {
              "priority": 120,
              "direction": "Outbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "AzureMonitor",
              "description": "Log Analytics"
            }
          },
          {
            "name": "Allow-AzureStorage",
            "properties": {
              "priority": 135,
              "direction": "Outbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "Storage",
              "description": "Azure Storage access (required for DSC extension / session host registration artifacts)"
            }
          },
          {
            "name": "Allow-WindowsActivation",
            "properties": {
              "priority": 130,
              "direction": "Outbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "1688",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "Internet",
              "description": "Windows licensing (KMS activation)"
            }
          },
          {
            "name": "Deny-All-Outbound",
            "properties": {
              "priority": 4096,
              "direction": "Outbound",
              "access": "Deny",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Internet",
              "description": "Lock down everything else"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks/subnets",
      "apiVersion": "2023-09-01",
      "name": "[concat(parameters('vnetName'), '/', parameters('subnetName'))]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]"
      ],
      "properties": {
        "addressPrefix": "[parameters('subnetAddressPrefix')]",
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]"
        }
      }
    }
  ],
  "outputs": {
    "nsgId": {
      "type": "string",
      "value": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]"
    }
  }
}
